@@ -19,10 +19,10 @@
 package org.apache.cassandra.sidecar.tasks;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Function;
 
@@ -120,6 +120,7 @@ class CassandraClusterSchemaMonitorTest
         // Setup default enabled configurations
         when(mockCdcConfiguration.isEnabled()).thenReturn(true);
         when(mockCdcConfiguration.tableSchemaRefreshTime()).thenReturn(SecondBoundConfiguration.parse("60s"));
+        when(mockCdcConfiguration.batchStatementsEnabled()).thenReturn(true);
         when(mockSchemaKeyspaceConfiguration.isEnabled()).thenReturn(true);
 
         when(mockNodeSettings.releaseVersion()).thenReturn("4.0.0");
@@ -205,21 +206,29 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls for initial schema
-            Map<TableIdentifier, String> mockCreateStmts1 = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            Map<TableIdentifier, String> mockCreateStmts2 = Map.of(
-            TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA,
-            TableIdentifier.of("test", "another_cdc_table"), UPDATED_SCHEMA
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts1 = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts2 = Map.of(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()),
+            TableIdentifier.of("test", "another_cdc_table"), new CdcUtil.TableSchema(UPDATED_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate())
             );
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(INITIAL_SCHEMA)).thenReturn(mockCreateStmts1);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(UPDATED_SCHEMA)).thenReturn(mockCreateStmts2);
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(INITIAL_SCHEMA)).thenReturn(mockCreateStmts1);
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(UPDATED_SCHEMA)).thenReturn(mockCreateStmts2);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            // Each buildSchema() call must return a distinct CqlTable so the two-table case
+            // doesn't collapse into a one-element Set (Mockito would otherwise hand back the
+            // exact same mock instance for both tables, which a Set naturally dedupes).
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class)))
+            .thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             // First call returns initial schema, second call returns updated schema
             when(mockDatabaseAccessor.fullSchema())
             .thenReturn(INITIAL_SCHEMA)
             .thenReturn(UPDATED_SCHEMA);
+
+            @SuppressWarnings("unchecked")
+            ArgumentCaptor<Set<CqlTable>> tablesCaptor = ArgumentCaptor.forClass(Set.class);
 
             // First refresh - should detect and process schema
             clusterSchema.refresh();
@@ -227,7 +236,8 @@ class CassandraClusterSchemaMonitorTest
             // Verify initial schema processing
             verify(mockDatabaseAccessor, times(1)).fullSchema();
             verify(mockDriverUnsupportedSchemaCache, times(1)).getFullSchema();
-            verify(mockCdcBridge, times(1)).updateCdcSchema(any(Set.class), eq(Partitioner.Murmur3Partitioner), any());
+            verify(mockCdcBridge, times(1)).updateCdcSchema(tablesCaptor.capture(), eq(Partitioner.Murmur3Partitioner), any());
+            assertThat(tablesCaptor.getValue()).hasSize(1);
 
             // Second refresh - should detect schema change and update
             clusterSchema.refresh();
@@ -235,7 +245,158 @@ class CassandraClusterSchemaMonitorTest
             // Verify schema change detection and update
             verify(mockDatabaseAccessor, times(2)).fullSchema();
             verify(mockDriverUnsupportedSchemaCache, times(2)).getFullSchema();
-            verify(mockCdcBridge, times(2)).updateCdcSchema(any(Set.class), eq(Partitioner.Murmur3Partitioner), any());
+            verify(mockCdcBridge, times(2)).updateCdcSchema(tablesCaptor.capture(), eq(Partitioner.Murmur3Partitioner), any());
+            assertThat(tablesCaptor.getValue()).hasSize(2);
+        }
+    }
+
+    @Test
+    void testRefreshUnregistersTableNoLongerAtRisk()
+    {
+        try (MockedStatic<CdcBridgeFactory> cdcBridgeFactory = Mockito.mockStatic(CdcBridgeFactory.class);
+             MockedStatic<CdcUtil> cdcUtil = Mockito.mockStatic(CdcUtil.class);
+             MockedStatic<CqlUtils> cqlUtils = Mockito.mockStatic(CqlUtils.class))
+        {
+            when(mockCassandraBridgeFactory.get(anyString())).thenReturn(mockCassandraBridge);
+            cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
+
+            // Initial schema: a CDC table and a non-CDC table sharing the same partition key
+            // structure — the non-CDC table is at risk and must be registered.
+            String initialCdcTableStmt = "CREATE TABLE test.cdc_table (id uuid PRIMARY KEY, data text) WITH cdc = true;";
+            String nonCdcTableStmt = "CREATE TABLE test.non_cdc_table (id uuid PRIMARY KEY, data text);";
+            String initialMixedSchema = initialCdcTableStmt + nonCdcTableStmt;
+            // Updated schema: the CDC table's partition key type changed, so it no longer
+            // matches non_cdc_table's structure — non_cdc_table is no longer at risk.
+            String updatedCdcTableStmt = "CREATE TABLE test.cdc_table (id text PRIMARY KEY, data text) WITH cdc = true;";
+            String updatedMismatchedSchema = updatedCdcTableStmt + nonCdcTableStmt;
+
+            Map<TableIdentifier, CdcUtil.TableSchema> initialTables = Map.of(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(initialCdcTableStmt, true, CdcUtil.PartitionKeySignature.of(List.of("uuid"))),
+            TableIdentifier.of("test", "non_cdc_table"), new CdcUtil.TableSchema(nonCdcTableStmt, false, CdcUtil.PartitionKeySignature.of(List.of("uuid")))
+            );
+            Map<TableIdentifier, CdcUtil.TableSchema> updatedTables = Map.of(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(updatedCdcTableStmt, true, CdcUtil.PartitionKeySignature.of(List.of("text"))),
+            TableIdentifier.of("test", "non_cdc_table"), new CdcUtil.TableSchema(nonCdcTableStmt, false, CdcUtil.PartitionKeySignature.of(List.of("uuid")))
+            );
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(initialMixedSchema)).thenReturn(initialTables);
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(updatedMismatchedSchema)).thenReturn(updatedTables);
+            cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
+            cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class)))
+            .thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
+
+            when(mockDatabaseAccessor.fullSchema())
+            .thenReturn(initialMixedSchema)
+            .thenReturn(updatedMismatchedSchema);
+
+            // First refresh: both tables are at risk, both registered, nothing to unregister yet
+            clusterSchema.refresh();
+            verify(mockCdcBridge, never()).unregisterTables(any(Set.class));
+
+            // Second refresh: non_cdc_table is no longer at risk — must be unregistered, and
+            // updateCdcSchema (register/update) must be called before unregisterTables so
+            // there's never a window where a still-needed table is missing.
+            clusterSchema.refresh();
+
+            org.mockito.InOrder inOrder = org.mockito.Mockito.inOrder(mockCdcBridge);
+            inOrder.verify(mockCdcBridge, times(2)).updateCdcSchema(any(Set.class), eq(Partitioner.Murmur3Partitioner), any());
+            inOrder.verify(mockCdcBridge).unregisterTables(eq(Set.of(TableIdentifier.of("test", "non_cdc_table"))));
+        }
+    }
+
+    @Test
+    void testRefreshDoesNotUnregisterWhenNoTableBecomesStale()
+    {
+        try (MockedStatic<CdcBridgeFactory> cdcBridgeFactory = Mockito.mockStatic(CdcBridgeFactory.class);
+             MockedStatic<CdcUtil> cdcUtil = Mockito.mockStatic(CdcUtil.class);
+             MockedStatic<CqlUtils> cqlUtils = Mockito.mockStatic(CqlUtils.class))
+        {
+            when(mockCassandraBridgeFactory.get(anyString())).thenReturn(mockCassandraBridge);
+            cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
+
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
+            cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
+            cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class)))
+            .thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
+
+            // Same table set every refresh — nothing ever becomes stale.
+            when(mockDatabaseAccessor.fullSchema())
+            .thenReturn(INITIAL_SCHEMA)
+            .thenReturn(INITIAL_SCHEMA + " ");  // trailing space forces a "schema changed" refresh without changing the table set
+
+            clusterSchema.refresh();
+            clusterSchema.refresh();
+
+            verify(mockCdcBridge, never()).unregisterTables(any(Set.class));
+        }
+    }
+
+    @Test
+    void testRefreshRetriesUnregistrationAfterAFailedAttempt()
+    {
+        try (MockedStatic<CdcBridgeFactory> cdcBridgeFactory = Mockito.mockStatic(CdcBridgeFactory.class);
+             MockedStatic<CdcUtil> cdcUtil = Mockito.mockStatic(CdcUtil.class);
+             MockedStatic<CqlUtils> cqlUtils = Mockito.mockStatic(CqlUtils.class))
+        {
+            when(mockCassandraBridgeFactory.get(anyString())).thenReturn(mockCassandraBridge);
+            cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
+
+            // Same setup as testRefreshUnregistersTableNoLongerAtRisk: non_cdc_table starts at
+            // risk (registered), then a schema change makes it no longer at risk.
+            String initialCdcTableStmt = "CREATE TABLE test.cdc_table (id uuid PRIMARY KEY, data text) WITH cdc = true;";
+            String nonCdcTableStmt = "CREATE TABLE test.non_cdc_table (id uuid PRIMARY KEY, data text);";
+            String initialMixedSchema = initialCdcTableStmt + nonCdcTableStmt;
+            String updatedCdcTableStmt = "CREATE TABLE test.cdc_table (id text PRIMARY KEY, data text) WITH cdc = true;";
+            String updatedMismatchedSchema = updatedCdcTableStmt + nonCdcTableStmt;
+            // Third refresh: schema "changes" again but the table set is identical — appending
+            // a non-whitespace comment-like suffix (whitespace alone would be stripped by
+            // DriverUnsupportedSchemaCache.concatSchemas()'s trim(), never triggering a
+            // "schema changed" refresh at all) is enough to force refresh() to re-run its
+            // schema-changed branch and retry unregistration.
+            String thirdRefreshSchema = updatedMismatchedSchema + " -- refresh3";
+
+            Map<TableIdentifier, CdcUtil.TableSchema> initialTables = Map.of(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(initialCdcTableStmt, true, CdcUtil.PartitionKeySignature.of(List.of("uuid"))),
+            TableIdentifier.of("test", "non_cdc_table"), new CdcUtil.TableSchema(nonCdcTableStmt, false, CdcUtil.PartitionKeySignature.of(List.of("uuid")))
+            );
+            Map<TableIdentifier, CdcUtil.TableSchema> updatedTables = Map.of(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(updatedCdcTableStmt, true, CdcUtil.PartitionKeySignature.of(List.of("text"))),
+            TableIdentifier.of("test", "non_cdc_table"), new CdcUtil.TableSchema(nonCdcTableStmt, false, CdcUtil.PartitionKeySignature.of(List.of("uuid")))
+            );
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(initialMixedSchema)).thenReturn(initialTables);
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(updatedMismatchedSchema)).thenReturn(updatedTables);
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(thirdRefreshSchema)).thenReturn(updatedTables);
+            cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
+            cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class)))
+            .thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
+
+            when(mockDatabaseAccessor.fullSchema())
+            .thenReturn(initialMixedSchema)
+            .thenReturn(updatedMismatchedSchema)
+            .thenReturn(thirdRefreshSchema);
+
+            Set<TableIdentifier> staleSet = Set.of(TableIdentifier.of("test", "non_cdc_table"));
+
+            // First refresh: both at risk, nothing stale yet.
+            clusterSchema.refresh();
+
+            // Second refresh: non_cdc_table becomes stale, but unregisterTables fails.
+            Mockito.doThrow(new RuntimeException("simulated bridge failure"))
+                  .when(mockCdcBridge).unregisterTables(eq(staleSet));
+            clusterSchema.refresh();
+            verify(mockCdcBridge, times(1)).unregisterTables(eq(staleSet));
+
+            // Third refresh (schema "changes" again, though the table set is identical): since
+            // the failed unregistration must not have been forgotten, non_cdc_table is still
+            // treated as stale and unregisterTables is retried with the same set.
+            Mockito.reset(mockCdcBridge);
+            cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
+            clusterSchema.refresh();
+            verify(mockCdcBridge, times(1)).unregisterTables(eq(staleSet));
         }
     }
 
@@ -250,11 +411,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             // First refresh
             clusterSchema.refresh();
@@ -280,11 +442,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             AtomicBoolean listener1Called = new AtomicBoolean(false);
             AtomicBoolean listener2Called = new AtomicBoolean(false);
@@ -362,11 +525,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             @SuppressWarnings("unchecked")
             Promise<Void> promise = mock(Promise.class);
@@ -403,40 +567,6 @@ class CassandraClusterSchemaMonitorTest
     }
 
     @Test
-    void testBuildCdcTablesWithDatabaseAccessor()
-    {
-        try (MockedStatic<CdcUtil> cdcUtil = Mockito.mockStatic(CdcUtil.class);
-             MockedStatic<CqlUtils> cqlUtils = Mockito.mockStatic(CqlUtils.class))
-        {
-            when(mockCassandraBridgeFactory.get(anyString())).thenReturn(mockCassandraBridge);
-
-            // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
-            cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
-            cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
-
-            ConcurrentHashMap<TableIdentifier, UUID> tableIdCache = new ConcurrentHashMap<>();
-            UUID testTableId = UUID.randomUUID();
-
-            when(mockDatabaseAccessor.getTableId(any(TableIdentifier.class))).thenReturn(testTableId);
-            when(mockDatabaseAccessor.fullSchema()).thenReturn(INITIAL_SCHEMA);
-
-            Set<CqlTable> result = CassandraClusterSchemaMonitor.buildCdcTables(
-            mockDatabaseAccessor,
-            mockDriverUnsupportedSchemaCache,
-            tableIdCache,
-            mockCassandraBridge
-            );
-
-            assertThat(result).isNotNull();
-            verify(mockDatabaseAccessor, times(1)).fullSchema();
-            verify(mockDatabaseAccessor, times(1)).partitioner();
-        }
-    }
-
-    @Test
     void testAddSchemaChangeListenerStoresListener()
     {
         try (MockedStatic<CdcBridgeFactory> cdcBridgeFactory = Mockito.mockStatic(CdcBridgeFactory.class);
@@ -447,11 +577,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             AtomicBoolean listenerCalled = new AtomicBoolean(false);
             Runnable listener = () -> listenerCalled.set(true);
@@ -474,11 +605,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             AtomicBoolean listener1Called = new AtomicBoolean(false);
             AtomicBoolean listener2Called = new AtomicBoolean(false);
@@ -507,11 +639,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             AtomicBoolean listenerCalled = new AtomicBoolean(false);
             clusterSchema.addSchemaChangeListener(() -> listenerCalled.set(true));
@@ -566,11 +699,12 @@ class CassandraClusterSchemaMonitorTest
             cdcBridgeFactory.when(() -> CdcBridgeFactory.getCdcBridge(any(CassandraBridge.class))).thenReturn(mockCdcBridge);
 
             // Mock utility class calls
-            Map<TableIdentifier, String> mockCreateStmts = Collections.singletonMap(TableIdentifier.of("test", "cdc_table"), INITIAL_SCHEMA);
-            cdcUtil.when(() -> CdcUtil.extractCdcTables(anyString())).thenReturn(mockCreateStmts);
+            Map<TableIdentifier, CdcUtil.TableSchema> mockCreateStmts = Collections.singletonMap(
+            TableIdentifier.of("test", "cdc_table"), new CdcUtil.TableSchema(INITIAL_SCHEMA, true, CdcUtil.PartitionKeySignature.indeterminate()));
+            cdcUtil.when(() -> CdcUtil.extractAllTablesWithCdcFlag(anyString())).thenReturn(mockCreateStmts);
             cqlUtils.when(() -> CqlUtils.extractUdts(anyString(), anyString())).thenReturn(Collections.emptySet());
             cqlUtils.when(() -> CqlUtils.extractReplicationFactor(anyString(), anyString())).thenReturn(ReplicationFactor.simpleStrategy(1));
-            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenReturn(mock(CqlTable.class));
+            when(mockCassandraBridge.buildSchema(anyString(), anyString(), any(ReplicationFactor.class), any(Partitioner.class), any(Set.class), any(UUID.class), any(Integer.class), any(Boolean.class))).thenAnswer(CassandraClusterSchemaMonitorTest::mockCqlTableFromBuildSchemaArgs);
 
             TableIdentifier expectedTableId = TableIdentifier.of("test", "cdc_table");
             UUID expectedUuid = UUID.randomUUID();
@@ -582,5 +716,25 @@ class CassandraClusterSchemaMonitorTest
             // Verify that the database accessor was called to get table ID
             verify(mockDatabaseAccessor).getTableId(any(TableIdentifier.class));
         }
+    }
+
+    /**
+     * Stubs a {@link CqlTable} mock with its {@code keyspace()}/{@code table()} derived from the
+     * arguments {@code CassandraBridge.buildSchema(...)} was actually invoked with, so
+     * downstream code that keys off {@code TableIdentifier.of(cqlTable.keyspace(), cqlTable.table())}
+     * (e.g. {@link CassandraClusterSchemaMonitor#refresh()}'s stale-table diffing) doesn't fail
+     * on an empty/null keyspace or table name.
+     */
+    private static CqlTable mockCqlTableFromBuildSchemaArgs(org.mockito.invocation.InvocationOnMock invocation)
+    {
+        String createStatement = invocation.getArgument(0);
+        String keyspace = invocation.getArgument(1);
+        java.util.regex.Matcher matcher = java.util.regex.Pattern.compile("CREATE TABLE \\S+\\.(\\w+)").matcher(createStatement);
+        String table = matcher.find() ? matcher.group(1) : "unknown_table";
+
+        CqlTable cqlTable = mock(CqlTable.class);
+        when(cqlTable.keyspace()).thenReturn(keyspace);
+        when(cqlTable.table()).thenReturn(table);
+        return cqlTable;
     }
 }
